Fix hero content overflow on mobile

--- a/assets/css/compositions/grid.css
+++ b/assets/css/compositions/grid.css
@@ -2,6 +2,7 @@
   display: grid;
   grid-column-gap: var(--space-large);
   grid-row-gap: var(--space-large);
+  grid-template-columns: minmax(min(33vw, 25ch), 1fr);
 }
 
 @media (min-width: 800px) {
